[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/TreatmentPanel.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/treatmentPanel.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/hgssFont.tres" type="BitmapFont" id=3]
[ext_resource path="res://Scenes/JournalIcon.tscn" type="PackedScene" id=4]
[ext_resource path="res://outlineShader.gdshader" type="Shader" id=5]
[ext_resource path="res://Assets/treatmentSpriteFrames.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=7]
[ext_resource path="res://Assets/UI/backButton.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=22]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.329412, 0.952941, 0.952941, 1 )
shader_param/opacity = 0.0

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 8, 9 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=23]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=16]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=17]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=18]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=19]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=20]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[sub_resource type="ShaderMaterial" id=21]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.952941, 0.92549, 0.329412, 1 )
shader_param/opacity = 0.0

[node name="TreatmentPanel" type="Sprite"]
texture = ExtResource( 2 )
centered = false
script = ExtResource( 1 )

[node name="Button" type="Sprite" parent="."]
material = SubResource( 22 )
position = Vector2( 95, 14 )
texture = ExtResource( 8 )
script = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="Button"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Area2D"]
shape = SubResource( 24 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 9.0
margin_right = 82.0
margin_bottom = 23.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]TREATMENTS[/center]"
text = "TREATMENTS"

[node name="TreatmentName" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 90.0
margin_right = 123.0
margin_bottom = 105.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
text = "Select treatment"

[node name="Affliction" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 106.0
margin_right = 82.0
margin_bottom = 121.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
text = "TREATS:"

[node name="Affliction2" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 122.0
margin_right = 113.0
margin_bottom = 137.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
text = "Unknown"

[node name="TreatmentIcons" type="Node2D" parent="."]
position = Vector2( 0, -2 )

[node name="JournalIcon" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 2 )
position = Vector2( 14, 34 )
frames = ExtResource( 6 )
animation = "anti inflammatory"

[node name="JournalIcon2" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 3 )
position = Vector2( 30, 34 )
frames = ExtResource( 6 )
animation = "antibiotics"

[node name="JournalIcon3" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 4 )
position = Vector2( 46, 34 )
frames = ExtResource( 6 )
animation = "antifungal"

[node name="JournalIcon4" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 5 )
position = Vector2( 62, 34 )
frames = ExtResource( 6 )
animation = "bandages"

[node name="JournalIcon5" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 6 )
position = Vector2( 78, 34 )
frames = ExtResource( 6 )
animation = "claw cream"

[node name="JournalIcon6" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 7 )
position = Vector2( 94, 34 )
frames = ExtResource( 6 )
animation = "dewormer"

[node name="JournalIcon7" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 8 )
position = Vector2( 14, 50 )
frames = ExtResource( 6 )
animation = "eye cream"

[node name="JournalIcon8" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 9 )
position = Vector2( 30, 50 )
frames = ExtResource( 6 )
animation = "eye drops"

[node name="JournalIcon9" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 10 )
position = Vector2( 46, 50 )
frames = ExtResource( 6 )
animation = "flea meds"

[node name="JournalIcon10" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 11 )
position = Vector2( 62, 50 )
frames = ExtResource( 6 )
animation = "flu meds"

[node name="JournalIcon11" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 12 )
position = Vector2( 78, 50 )
frames = ExtResource( 6 )
animation = "mange meds"

[node name="JournalIcon12" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 23 )
position = Vector2( 94, 50 )
frames = ExtResource( 6 )
animation = "med bath"

[node name="JournalIcon13" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 14 )
position = Vector2( 14, 66 )
frames = ExtResource( 6 )
animation = "mineral bath"

[node name="JournalIcon20" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 15 )
position = Vector2( 30, 82 )
frames = ExtResource( 6 )
animation = "vitamin injection"

[node name="JournalIcon14" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 16 )
position = Vector2( 30, 66 )
frames = ExtResource( 6 )
animation = "parasite meds"

[node name="JournalIcon15" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 17 )
position = Vector2( 46, 66 )
frames = ExtResource( 6 )
animation = "refrigeration"

[node name="JournalIcon16" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 18 )
position = Vector2( 62, 66 )
frames = ExtResource( 6 )
animation = "splint"

[node name="JournalIcon17" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 19 )
position = Vector2( 78, 66 )
frames = ExtResource( 6 )
animation = "tank filter"

[node name="JournalIcon18" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 20 )
position = Vector2( 94, 66 )
frames = ExtResource( 6 )
animation = "teddy bear"

[node name="JournalIcon19" parent="TreatmentIcons" instance=ExtResource( 4 )]
material = SubResource( 21 )
position = Vector2( 14, 82 )
frames = ExtResource( 6 )
animation = "thyroid meds"

[connection signal="clicked" from="Button" to="." method="_on_Button_clicked"]
[connection signal="input_event" from="Button/Area2D" to="Button" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Button/Area2D" to="Button" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Button/Area2D" to="Button" method="_on_Area2D_mouse_exited"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon" to="." method="_on_JournalIcon_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon2" to="." method="_on_JournalIcon2_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon3" to="." method="_on_JournalIcon3_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon4" to="." method="_on_JournalIcon4_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon5" to="." method="_on_JournalIcon5_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon6" to="." method="_on_JournalIcon6_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon7" to="." method="_on_JournalIcon7_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon8" to="." method="_on_JournalIcon8_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon9" to="." method="_on_JournalIcon9_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon10" to="." method="_on_JournalIcon10_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon11" to="." method="_on_JournalIcon11_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon12" to="." method="_on_JournalIcon12_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon13" to="." method="_on_JournalIcon13_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon20" to="." method="_on_JournalIcon20_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon14" to="." method="_on_JournalIcon14_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon15" to="." method="_on_JournalIcon15_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon16" to="." method="_on_JournalIcon16_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon17" to="." method="_on_JournalIcon17_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon18" to="." method="_on_JournalIcon18_clicked"]
[connection signal="clicked" from="TreatmentIcons/JournalIcon19" to="." method="_on_JournalIcon19_clicked"]
